# ComputerGraphics

./: .gitignore  README.md
PA0-IIIS2020/: README.docx
PA0-IIIS2020/code/include/: element.hpp
PA1-IIIS2020/: REPORT.docx
PA1-IIIS2020/code/: run_all.sh
PA1-IIIS2020/code/include/: camera.hpp  group.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  ray.hpp  sphere.hpp  triangle.hpp
PA1-IIIS2020/code/src/: main.cpp  mesh.cpp
PA2-IIIS2020/: REPORT.docx
PA2-IIIS2020/code/include/: group.hpp  object3d.hpp  plane.hpp  transform.hpp
PA2-IIIS2020/code/src/: main.cpp
PA3-IIIS2020/: REPORT.docx
PA3-IIIS2020/code/include/: curve.hpp  group.hpp  mesh.hpp  object3d.hpp  plane.hpp  revsurface.hpp
PA3-IIIS2020/code/src/: main.cpp  mesh.cpp
PA4-IIIS2019/code/: CMakeLists.txt  run_all.sh
PA4-IIIS2019/code/include/: curve.hpp  ffd_cage.hpp  group.hpp  mesh.hpp  scene_parser.hpp  sphere.hpp
PA4-IIIS2019/code/src/: main.cpp
PA4-IIIS2019/code/testcases/: scene11_bunny_ffd.txt  scene12_cylinder_ffd.txt
PA4-IIIS2020/: REPORT.docx  cgan.py  test.py  train.sh
PA4-IIIS2020/code/include/: camera.hpp  curve.hpp  ffd_cage.hpp  group.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  sphere.hpp  triangle.hpp
PA4-IIIS2020/code/src/: scene_parser.cpp
PA4-IIIS2020/code/testcases/: scene13_fish_ffd.txt
PA5-IIIS2020/code/: CMakeLists.txt  run_all.sh
PA5-IIIS2020/code/include/: Solver.hpp  image.hpp
PA5-IIIS2020/code/src/: image.cpp  main.cpp
RT/: README.md
RT/code/: CMakeLists.txt  run_all.sh  server.sh
RT/code/include/: ClmbsImg.hpp  camera.hpp  curve.hpp  emitter.hpp  group.hpp  hit.cpp  hit.h  hit.hpp  image.hpp  material.hpp  mesh.hpp  object3d.hpp  parser.hpp  pugixml.hpp  ray.hpp  sampler.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  transform.hpp  triangle.hpp  utils.hpp
RT/code/include/bsdf/: bsdf.h  conductor.hpp  dielectric.hpp  diffuse.hpp  material.hpp  plastic.hpp  roughconductor.hpp  roughplastic.hpp  thindielectric.hpp
RT/code/include/image/: ClmbsImg.hpp  image.hpp
RT/code/include/object/: curve.hpp  group.hpp  mesh.hpp  object3d.hpp  revsurface.hpp  sphere.hpp  transform.hpp  triangle.hpp
RT/code/include/texture/: bump.hpp  texture.cpp  texture.h
RT/code/include/vecmath/: Matrix2d.cpp  Matrix2d.h  Matrix3d.cpp  Matrix3d.h  Matrix4d.cpp  Matrix4d.h  Quat4d.cpp  Quat4d.h  Vector2d.cpp  Vector2d.h  Vector3d.cpp  Vector3d.h  Vector4d.cpp  Vector4d.h  vecmath.h
RT/code/parse/: parse  parse.cpp
RT/code/src/: main.cpp
RT/code/testcases/: cbox1.xml  cbox2.xml  cornellbox.xml  cornellbox1.xml  cornellbox2.xml  scene08_bunny.txt  smallpt.xml  spline.xml
RT/code/testcases/bathroom/: scene.xml
RT/code/testcases/coffee/: scene.xml
RT/code/testcases/dining-room/: scene.xml
RT/code/testcases/kitchen/: scene.xml
RT/code/testcases/spaceship/: scene.xml
